# repotoire

./: .dockerignore  .env.example  .falkorrc  .gitignore  .mcp.json  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .release-please-manifest.json  .repotoireignore  .vercelignore  AGENT_PLAYBOOK.md  ANALYSIS_SUMMARY.txt  CHANGELOG.md  CLAUDE.md  CONFIG.md  CONTRIBUTING.md  DETECTOR_IMPROVEMENTS.md  Dockerfile  Dockerfile.api  Dockerfile.legacy  E2E_ANALYSIS.md  GITHUB_ISSUES.md  HOMEBREW-CORE-PR.md  LICENSE  Makefile  RAG_ARCHITECTURE.md  README.md  READ_ANALYSIS_FIRST.md  RELEASE_GATE.md  ROADMAP.md  SAAS_ARCHITECTURE.md  SECURITY_AUDIT_2025-11-19.md  SECURITY_AUDIT_2026-02-06.md  TODO.md  TODO_ANALYSIS.md  TODO_ANALYSIS_QUICK.md  VERIFICATION_REPORT.md  action.yml  alembic.ini  check_vector_indexes.py  (+23 more)
python-deprecation/: README.md  pyproject.toml
python-deprecation/repotoire/: __init__.py
repotoire-cli/: .repotoireignore  CONTRIBUTING.md  Cargo.toml  MIGRATION.md  README.md  REFACTORING_SUMMARY.md  add_interner.py  build.rs  fix_all_remaining.py  fix_batch.py  fix_compact_migration.py  fix_display_v3.py  fix_i_conflict.py  fix_loop_conflict.py  fix_loop_i.py  fix_refs.py  fix_remaining.py  fix_remaining_v2.py  fix_v4.py  fix_v5.py  repotoire.toml
repotoire-cli/.archive/lsp/: diagnostics.rs  hover.rs
repotoire-cli/.claude/: CLAUDE.md
repotoire-cli/.github/workflows/: repotoire.yml
repotoire-cli/docs/: CI_CD.md  CONFIGURATION.md  DETECTORS.md  FAQ.md  FIXING_ISSUES.md  GETTING_STARTED.md  MCP.md  SCHEMA.md  USER_GUIDE.md
repotoire-cli/docs/plans/: 2026-03-04-gd-detector-perf-design.md  2026-03-05-deterministic-graph-design.md  2026-03-05-two-phase-pipeline-plan.md  2026-03-10-content-indexed-detection-design.md  2026-03-10-content-indexed-detection-plan.md  2026-03-13-dead-code-fp-reduction-design.md  2026-03-13-dead-code-fp-reduction-implementation.md  2026-03-13-lazy-class-rust-design.md  2026-03-13-lazy-class-rust-implementation.md  2026-03-13-nplus-one-ast-rearchitecture-design.md  2026-03-13-nplus-one-ast-rearchitecture-implementation.md
repotoire-cli/models/: seed_model.json  seed_model_native.json  seed_model_stats.json
repotoire-cli/scripts/: fix_agent.py  fix_agent_ollama.py  validate.sh
repotoire-cli/src/: http.rs  lib.rs  log.rs  main.rs  models.rs  session.rs
repotoire-cli/src/ai/: client.rs  fix_generator.rs  mod.rs  prompts.rs  verify.rs
repotoire-cli/src/baseline/: fingerprint.rs  mod.rs
repotoire-cli/src/cache/: masking.rs  mod.rs  paths.rs  traits.rs
repotoire-cli/src/calibrate/: collector.rs  mod.rs  ngram.rs  profile.rs  resolver.rs
repotoire-cli/src/classifier/: bootstrap.rs  debt.rs  features.rs  features_v2.rs  feedback.rs  gbdt_model.rs  mod.rs  model.rs  thresholds.rs  train.rs
repotoire-cli/src/cli/: analyze.rs  baseline.rs  benchmark.rs  clean.rs  debt.rs  diff.rs  diff_hunks.rs  doctor.rs  embedded_scripts.rs  findings.rs  fix.rs  graph.rs  init.rs  mod.rs  serve.rs  status.rs  tui.rs  watch.rs
repotoire-cli/src/config/: mod.rs  project_config.rs  project_type_scoring.rs  user_config.rs
repotoire-cli/src/detectors/: ai_boilerplate.rs  ai_boilerplate.rs.bak  ai_churn.rs  ai_churn.rs.bak  ai_complexity_spike.rs  ai_duplicate_block.rs  ai_missing_tests.rs  ai_naming_pattern.rs  analysis_context.rs  api_surface.rs  architectural_bottleneck.rs  argument_mismatch.rs.bak  ast_fingerprint.rs  async_antipattern.rs.bak  bandit.rs  base.rs  boolean_trap.rs  broad_exception.rs  callback_hell.rs  circular_dependency.rs  class_context.rs  cleartext_credentials.rs  command_injection.rs  commented_code.rs  community_misplacement.rs  confidence_enrichment.rs  content_classifier.rs  context_hmm.rs  core_utility.rs  cors_misconfig.rs  data_clumps.rs  data_flow.rs  dead_code.rs  dead_store.rs  debug_code.rs  deep_nesting.rs  degree_centrality.rs  dep_audit.rs  detector_context.rs  django_security.rs  (+111 more)
repotoire-cli/src/engine/: context.rs  delta.rs  diff.rs  mod.rs  report_context.rs  state.rs
repotoire-cli/src/fixes/: mod.rs
repotoire-cli/src/git/: blame.rs  co_change.rs  enrichment.rs  history.rs  mod.rs  ownership.rs
repotoire-cli/src/graph/: algo.rs  builder.rs  cached.rs  client.rs  compact_builder.rs  compact_store.rs  compat.rs  csr.rs  frozen.rs  indexes.rs  interner.rs  metrics_cache.rs  mmap_store.rs  mod.rs  node_index.rs  overlay.rs  persistence.rs  primitives.rs  queries.rs  schema.rs  store.rs  store_models.rs  store_query.rs  streaming_builder.rs  traits.rs  unified.rs
repotoire-cli/src/mcp/: handlers.rs  mod.rs  params.rs  rmcp_server.rs  server.rs  state.rs  tools.rs  transport.rs
repotoire-cli/src/parsers/: bounded_pipeline.rs  c.rs  cpp.rs  cpp.rs.bak  csharp.rs  go.rs  java.rs  kotlin.rs.bak  lightweight.rs  lightweight_parser.rs  mod.rs  parallel_pipeline.rs  python.rs  rust.rs  streaming.rs  typescript.rs
repotoire-cli/src/pipeline/: mod.rs
repotoire-cli/src/predictive/: architectural.rs  compound.rs  dependency_chain.rs  embedding_scorer.rs  embeddings.rs  mod.rs  relational.rs  structural.rs  token_level.rs
repotoire-cli/src/quantize/: bench.rs  dense_matrix.rs  mod.rs  turbo_quant.rs
repotoire-cli/src/reporters/: html.rs  json.rs  markdown.rs  mod.rs  narrative.rs  report_context.rs  sarif.rs  text.rs
repotoire-cli/src/scoring/: graph_scorer.rs  mod.rs
repotoire-cli/tests/: benchmark_precision.rs  cli_flags_test.rs  determinism.rs  dogfood.rs  incremental_correctness.rs  integration_test.rs  lang_c.rs  lang_cpp.rs  lang_csharp.rs  lang_go.rs  lang_java.rs  lang_javascript.rs  lang_python.rs  lang_rust.rs  lang_typescript.rs  postprocess_test.rs  value_propagation.rs  watch_engine_test.rs  worker_protocol_test.rs
repotoire-fast/: Cargo.toml
repotoire-fast/src/: call_resolver.rs  cfg.rs  complexity.rs  data_clumps.rs  dataflow.rs  duplicate.rs  findings_serde.rs  fix_applicator.rs  graph_algo.rs  graph_detectors.rs  lib.rs  path_cache.rs  pylint_rules.rs  similarity.rs  string_ops.rs  taint.rs  traversal.rs  tree_sitter_parser.rs  type_inference.rs  voting.rs  word2vec.rs
(+1797 files in other folders)
