[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "repotoire"
version = "0.1.0"
description = "Graph-Powered Code Health Platform"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Repotoire Team"}
]
keywords = ["code-analysis", "knowledge-graph", "technical-debt", "neo4j", "static-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "neo4j>=5.14.0",
    "openai>=1.0.0",
    "spacy>=3.7.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "networkx>=3.2.0",
    "jinja2>=3.1.0",
    "detect-secrets>=1.4.0",
    "gitpython>=3.1.40",
    "neo4j-graphrag>=1.10.1",
    "fastapi>=0.121.3",
    "uvicorn>=0.38.0",
    "mcp>=1.22.0",
    "python-dotenv>=1.2.1",
    "clerk-backend-api>=1.0.0",
    "httpx>=0.27.0",
    "pyjwt[crypto]>=2.8.0",  # JWT generation for GitHub App auth
    "cryptography>=41.0.0",  # Token encryption at rest
    "svix>=1.0.0",  # Clerk webhook signature verification
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",  # Parallel test execution
    "pytest-benchmark>=4.0.0",  # Performance benchmarking
    "pytest-asyncio>=0.23.0",  # Async test support
    "pytest-timeout>=2.2.0",  # Test timeout support
    "hypothesis>=6.100.0",  # Property-based testing for differential tests
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pyyaml>=6.0",  # For YAML config support in tests
    "tomli>=2.0.0",  # For TOML support on Python <3.11
]

config = [
    "pyyaml>=6.0",  # YAML config file support (.reporc)
    "tomli>=2.0.0; python_version < '3.11'",  # TOML support for older Python
]

gds = [
    "graphdatascience>=1.9.0",  # Neo4j Graph Data Science
]

all-languages = [
    "tree-sitter>=0.20.0",
    "tree-sitter-python>=0.20.0",
    "tree-sitter-javascript>=0.20.0",
    "tree-sitter-typescript>=0.20.0",
]

timescale = [
    "psycopg2-binary>=2.9.9",  # PostgreSQL adapter for TimescaleDB metrics storage
]

saas = [
    "sqlalchemy>=2.0.0",  # SQLAlchemy ORM for PostgreSQL SaaS database
    "alembic>=1.13.0",  # Database migrations for SQLAlchemy models
    "psycopg2-binary>=2.9.9",  # PostgreSQL adapter (sync)
    "asyncpg>=0.29.0",  # PostgreSQL adapter (async)
    "stripe>=7.0.0",  # Stripe payment processing for subscriptions
    "celery>=5.3.0",  # Distributed task queue for background jobs
    "redis>=5.0.0",  # Redis client for Celery broker
    "structlog>=24.0.0",  # Structured logging for workers
]

graphiti = [
    "graphiti-core>=0.24.1",  # Temporal knowledge graph for git history tracking
]

security = [
    "pip-audit>=2.6.0",  # Dependency vulnerability scanning
    "cyclonedx-bom>=4.0.0",  # SBOM generation (CycloneDX format)
]

local-embeddings = [
    "sentence-transformers>=2.2.0",  # Local embedding models (free, no API key required)
]

observability = [
    "prometheus-client>=0.19.0",  # Prometheus metrics (REPO-224)
    "opentelemetry-api>=1.20.0",  # OpenTelemetry tracing API
    "opentelemetry-sdk>=1.20.0",  # OpenTelemetry SDK
    "opentelemetry-exporter-otlp>=1.20.0",  # OTLP exporter for distributed tracing
]

detectors = [
    "mypy>=1.7.0",  # Type checking detector
    "pylint>=3.0.0",  # Advanced linting detector
    "bandit>=1.7.0",  # Security vulnerability detector
    "radon>=6.0.0",  # Complexity metrics detector
    "vulture>=2.0.0",  # Dead code detector
    "semgrep>=1.0.0",  # Advanced security pattern detector
]

ml = [
    "questionary>=2.0.0",  # Interactive CLI prompts for active learning
    "scikit-learn>=1.3.0",  # ML models for bug prediction and uncertainty sampling
    "joblib>=1.3.0",  # Model serialization for bug predictor
    "torch>=2.5.0,<2.9.0",  # PyTorch for multimodal fusion neural networks (pinned for PyG compat)
    "torch-geometric>=2.6.0",  # PyTorch Geometric for GraphSAGE
    # Note: pyg-lib, torch-sparse, torch-scatter must be installed separately
    # from https://data.pyg.org/whl/ with matching torch+cuda versions
]

sandbox = [
    "e2b-code-interpreter>=1.0.0",  # E2B cloud sandbox for secure code execution
]

voyage = [
    "voyageai>=0.3.0",  # Voyage AI embeddings (code-optimized, Anthropic-recommended)
]

anthropic = [
    "anthropic>=0.40.0",  # Anthropic Claude LLM for RAG answers
]

[project.scripts]
repotoire = "repotoire.cli:main"
repotoire-pre-commit = "repotoire.hooks.pre_commit:main"

[project.urls]
Homepage = "https://github.com/yourusername/repotoire"
Documentation = "https://repotoire.readthedocs.io"
Repository = "https://github.com/yourusername/repotoire"
Issues = "https://github.com/yourusername/repotoire/issues"

[tool.maturin]
# Build Rust extension from repotoire-fast directory
manifest-path = "repotoire-fast/Cargo.toml"
# Include the Python package
python-source = "."
# The Rust module name
module-name = "repotoire_fast"
# Include Python files
include = ["repotoire/**/*.py", "repotoire/**/*.html", "repotoire/**/*.jinja2"]
# Build features
features = ["pyo3/extension-module"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# Test markers for categorizing tests
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may require external services)",
    "e2b: Tests requiring E2B sandbox (requires E2B_API_KEY)",
    "slow: Slow tests (>30 seconds)",
    "benchmark: Performance benchmark tests",
    "neo4j: Tests requiring Neo4j connection",
    "falkordb: Tests requiring FalkorDB connection",
]
# Default timeout for tests (can be overridden per-test)
timeout = 300
# Filter warnings
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[dependency-groups]
dev = [
    "build>=1.3.0",
    "bump-my-version>=1.2.4",
    "git-cliff>=2.10.1",
]

# Bump My Version configuration for semantic versioning
[tool.bumpversion]
current_version = "0.1.0"
commit = true
commit_args = "--no-verify"
tag = true
tag_name = "v{new_version}"
tag_message = "Release v{new_version}"
allow_dirty = false
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
message = "chore: bump version {current_version} → {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "repotoire/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
