[package]
name = "repotoire"
version = "0.3.41"
edition = "2021"
description = "Graph-powered code analysis CLI. 81 detectors for security, architecture, and code quality."
license = "MIT"
repository = "https://github.com/Zach-hammad/repotoire"
homepage = "https://repotoire.com"
documentation = "https://github.com/Zach-hammad/repotoire#readme"
readme = "README.md"
keywords = ["code-analysis", "static-analysis", "security", "linter"]
categories = ["development-tools", "command-line-utilities"]
exclude = [
    "target/",
    ".repotoire/",
    "*.db",
    "*.lock",
    ".git/",
    "tests/",
    "benches/",
]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/repotoire-{ target }{ archive-suffix }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
pkg-url = "{ repo }/releases/download/v{ version }/repotoire-windows-x86_64.exe.zip"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/repotoire-linux-x86_64.tar.gz"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/repotoire-macos-x86_64.tar.gz"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/repotoire-macos-aarch64.tar.gz"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }
indicatif = "0.17"  # Progress bars
console = "0.15"    # Terminal styling

# Graph database

# Parsing
tree-sitter = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"

# Graph algorithms (from repotoire-fast)
rayon = "1.11"
rustc-hash = "2"
petgraph = "0.7"
sled = "0.34"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async (for AI API calls)
tokio = { version = "1", features = ["rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Git history
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }

# Misc
ignore = "0.4"  # .gitignore support
dashmap = "6"   # Concurrent hashmap for file cache
regex = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
lazy_static = "1.5"
md5 = "0.7"
ratatui = "0.30.0"
crossterm = "0.29.0"
walkdir = "2.5.0"
dirs = "6.0.0"
[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[[bin]]
name = "repotoire"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.25.0"
