[project]
name = "large-project"
version = "1.0.0"
description = "A large sample project for performance testing"
requires-python = ">=3.10"
dependencies = ["pytest>=7.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "B", "C90"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
