[project]
name = "with-tests"
version = "0.1.0"
description = "Sample project with comprehensive tests"
requires-python = ">=3.10"
dependencies = ["pytest>=7.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "B"]
